# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  README_cmake.md  README_install.md
.devcontainer/: Dockerfile  devcontainer.json
app/: main.cc
cmake/: Sanitizer.cmake  Tools.cmake  Warnings.cmake
init/: init.sh
